Fix font sizes on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,24 @@ header div {
   margin-left: auto;
 }
 
+@media (max-width: 600px) {
+  body {
+    font-size: 14px;
+  }
+  /*h1 {
+    font-size: 1.5em;
+  }
+  header div {
+    font-size: 1.1em;
+  }*/
+}
+
+@media (max-width: 400px) {
+  body {
+    font-size: 12px;
+  }
+}
+
 header a {
   color: white;
   text-decoration: none;
@@ -80,10 +98,11 @@ footer {
   width: 100%;
 }
 footer p, footer img {
-  margin: 1em 40px;
+  margin: 1em 0px 1em 40px;
 }
 footer img {
   height: 2em;
+  margin: 1em 40px 1em 20px;
 }
 footer img:hover{
   opacity: 0.6;
